--- a/style.css
+++ b/style.css
@@ -243,11 +243,11 @@ main {
   background-color: var(--themeColor);
   border-radius: 3px;
 }
-#about .divider ~ p {
+.sub-para {
   color: var(--textColor);
   font-size: 15px;
   letter-spacing: 0.5px;
-  font-weight: 400;
+  font-weight: 500;
   margin-top: 15px;
 }
 #about .about-col {
@@ -282,4 +282,69 @@ main {
   display: flex;
   margin-top: 20px;
   gap: 40px;
+}
+#about .about-col .info-col .icon-list-col .icon-list ul li {
+  list-style: none;
+  margin: 15px 0;
+}
+#about .about-col .info-col .icon-list-col .icon-list ul li i {
+  color: var(--themeColor);
+}
+#about .about-col .info-col .icon-list-col .icon-list ul li i strong {
+  color: var(--sideBGColor);
+  font-weight: 600;
+  margin-left: 2px;
+}
+#about .about-col .info-col .icon-list-col .icon-list ul li i span {
+  color: var(--textColor);
+  font-weight: 500;
+  font-size: 14px;
+}
+
+/* === MOBILE VIEW === */
+@media only screen and (maxwidth: 830px) {
+  #about {
+    padding: 50px 10px;
+  }
+  #about .divider ~ p {
+    font-size: 14px;
+    letter-spacing: 0px;
+    text-align: justify;
+  }
+  #about .about-col {
+    flex-direction: column;
+  }
+  #about .about-col .img-col img {
+    flex-basis: 50%;
+  }
+  #about .about-col .info-col h2 {
+    font-weight: 600;
+    font-size: 25px;
+    letter-spacing: 0px;
+  }
+  #about .about-col .info-col p {
+    font-size: 14px;
+    letter-spacing: 0px;
+  }
+  #about .about-col .info-col .icon-list-col {
+    flex-direction: column;
+    gap: 0;
+  }
+  #about .about-col .info-col .icon-list-col .icon-list ul li {
+    margin: 10px 0;
+  }
+  #about .about-col .info-col .icon-list-col .icon-list ul li strong {
+    font-weight: 500;
+    margin-left: 0px;
+  }
+  #about .about-col .info-col .icon-list-col .icon-list ul li span {
+    font-weight: 400;
+    font-size: 13px;
+  }
+}
+
+@media only screen and (maxwidth: 400px) {
+  #about .about-col .img-col img {
+    width: 90%;
+  }
 }
